# data_quality_pydantic

./: README.md  pyproject.toml
.hooks/: check_dag_id_existence.py
dags/dim_institucional/: exampledag.py
dags/ingestao_pda/: exemplo_decorator.py
